fix get methods